# Clunk

./: .gitignore  CMakeLists.txt  Clunk.pro  README.md  build_script.bat  build_script.sh  epd.pri  gitrev.pri  init.cmake
epd/: castle.epd  larsen.epd  perftsuite.epd  pos.epd  static.epd  sting.epd  test.epd  tt.epd
src/: Clunk.cpp  Clunk.h  Defs.h  HashTable.cpp  HashTable.h  Move.h  Stats.cpp  Stats.h  Types.h  main.cpp
src/senjo/: BackgroundCommand.cpp  BackgroundCommand.h  ChessEngine.cpp  ChessEngine.h  ChessMove.h  EngineOption.cpp  EngineOption.h  MoveFinder.cpp  MoveFinder.h  Output.cpp  Output.h  Platform.h  Square.h  Threading.cpp  Threading.h  UCIAdapter.cpp  UCIAdapter.h
